add custom input field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,1 @@
-<div>
-	<h3>In Value</h3>
-	<form [formGroup]="myForm" novalidate (ngSubmit)="save(myForm)">
-		<!--addresses-->
-		<div formArrayName="addresses">
-			<Button (click)="addAddress(myForm)">Add</Button>
-			<div *ngFor="let address of myForm.controls.addresses.controls; let i=index" class="panel panel-default">
-				<div class="panel-heading">
-					<span>Group {{i + 1}}</span>
-					<Button (click)="removeAddress(myForm,i)">Remove</Button>
-				</div>
-				<div class="panel-body" [formGroupName]="i">
-					<address [group]="myForm.controls.addresses.controls[i]"></address>
-				</div>
-			</div>
-		</div>
-		<div class="margin-20">
-			<button type="submit" class="btn btn-primary pull-right" [disabled]="!myForm.valid">Submit</button>
-		</div>
-		<div class="margin-20">
-			<div>myForm details:-</div>
-			<pre>form value: 
-				<br>{{myForm.value | json}}
-				</pre>
-			</div>
-		</form>
-	</div>
-	<hr>
-		<div>
-			<h3>Not In Value</h3>
-			<form [formGroup]="myForm2" novalidate (ngSubmit)="save(myForm2)">
-				<div formArrayName="addresses">
-					<Button (click)="addAddress(myForm2)">Add</Button>
-					<div *ngFor="let address of myForm2.controls.addresses.controls; let i=index" class="panel panel-default">
-						<div class="panel-heading">
-							<span>Group {{i + 1}}</span>
-							<Button (click)="removeAddress(myForm2,i)">Remove</Button>
-						</div>
-						<div class="panel-body" [formGroupName]="i">
-							<address [group]="myForm2.controls.addresses.controls[i]"></address>
-						</div>
-					</div>
-				</div>
-				<div class="margin-20">
-					<button type="submit" class="btn btn-primary pull-right" [disabled]="!myForm2.valid">Submit</button>
-				</div>
-				<div class="clearfix"></div>
-				<div class="margin-20">
-					<div>myForm2 details:-</div>
-					<pre>form value: 
-						<br>{{myForm2.value | json}}
-						</pre>
-					</div>
-				</form>
-			</div>
+<address-form></address-form>
