--- a/src/app/my-form.component.html
+++ b/src/app/my-form.component.html
@@ -15,14 +15,10 @@
 			</mat-form-field>
 		</mat-grid-tile>
 		<mat-grid-tile>
-			<mat-form-field>
-				<input matInput type="number" formControlName="start" placeholder="Start Range">
-				</mat-form-field>
-			</mat-grid-tile>
-			<mat-grid-tile>
-				<mat-form-field>
-					<input matInput type="number" class="form-control" formControlName="end" placeholder="End Range">
-					</mat-form-field>
-				</mat-grid-tile>
-			</mat-grid-list>
+			<app-inputrange matInput placeholder="Start Range" formControlName="start"></app-inputrange>
+		</mat-grid-tile>
+		<mat-grid-tile>
+			<app-inputrange matInput placeholder="End Range" formControlName="end"></app-inputrange>
+		</mat-grid-tile>
+	</mat-grid-list>
 </div>
